[package]
authors = ["Samuele Maci <macisamuele@gmail.com>"]
categories = ["caching", "data-structures", "development-tools", "encoding", "parsing"]
description = "Rust interface to load generic objects from an URI"
repository = "https://github.com/macisamuele/loader-rs"
edition = "2018"
keywords = ["json"]
license = "MIT"
name = "loader-rs"
readme = "README.md"
publish = true
version = "0.5.0"

[badges]
codecov = { repository = "macisamuele/loader-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "macisamuele/loader-rs" }
is-it-maintained-open-issues = { repository = "macisamuele/loader-rs" }
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
trait_json = ["json", "json-trait-rs/trait_json"]
trait_serde_json = ["serde_json", "json-trait-rs/trait_serde_json"]
trait_serde_yaml = ["serde_yaml", "json-trait-rs/trait_serde_yaml"]
regular_expression = ["regex"]

[dev-dependencies]
mockito = "0"
serde_json = "1"
test-case = "0"

[dependencies]
cached = "0"
json-trait-rs = "0"
json = { version = "0", optional = true }
lazy_static = "1"
parking_lot = "0"
regex = { version = "1", optional = true }
reqwest = { version = "0.10", features = ["blocking", "gzip"] }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0", optional = true }
strum = "0"
strum_macros = "0"
url = "2"
